--- a/package.json
+++ b/package.json
@@ -12,14 +12,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.0",
+    "@angular/cdk": "^9.0.0",
     "@angular/common": "~9.0.0",
     "@angular/compiler": "~9.0.0",
     "@angular/core": "~9.0.0",
     "@angular/forms": "~9.0.0",
+    "@angular/material": "^9.0.0",
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "@auth0/angular-jwt": "^4.0.0",
+    "@datorama/akita": "^4.19.2",
+    "@datorama/akita-ngdevtools": "^3.0.2",
+    "@types/socket.io-client": "^1.4.32",
+    "@zxing/ngx-scanner": "^3.0.0",
+    "json-schema": "^0.2.5",
+    "jwt-decode": "^2.2.0",
     "rxjs": "~6.5.4",
+    "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
